2016-08-04 Erik Petrich <epetrich

	* src/SDCCast.c (decorateTree, optimizeCompare): fixed bug #2503
	  and an unreported bug similar to bug #2529
	* support/regression/tests/bug-2503: added test
	* src/SDCClospre.hpp (forward_lospre_assignment): fixed bug #2510

2016-08-03 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcflow.c (eBBSuccessors),
	* src/SDCCloop.c (addPostLoopBlock): fixed bug #2453
	* support/regression/tests/bug-2453: added test

2016-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/tlcs90/setjmp.s,
	  device/lib/tlcs90/memmove.s:
	  Avoid messing up interrupt flags via pop af.

2016-08-02 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_strstr.c:
	  Fix a warning.
	* src/SDCCmain.c:
	  Fix usage info, patch #274.
	* src/SDCCtree_dec.hpp:
	  Fix isolation of redundant nodes in the tree-decomposition.

2016-08-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (cseBBlock): Recompute data flow if any outgoing
	  expressions have been changed (fixed bug #2495)
	* src/hc08/gen.c (genCopy),
	* src/hc08/ralloc.c (packPointerOp): fixed bug #2357
	* support/regression/tests/bug-2357.c: re-enabled test for hc08/s08

2016-08-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/stm8/gen.c (regFree): Y is not free when using extended stack

2016-07-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genMinus): mark A as modified for reverse subtraction
	* src/z80/gen.c (genPointerGet,genUnpackBits): preserve pointer
	  register pair if not dead

2016-07-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/fwio.cc: try defining WINVER instead of _WIN32_WINNT
	* sim/ucsim/cmd.src/Makefile.in,
	* sim/ucsim/gui.src/Makefile.in,
	* sim/ucsim/sim.src/Makefile.in,
	* sim/ucsim/main_in.mk: omit -D option to ar, not supported by all ar

2016-07-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* SDCC.props: added ExecutablePath
	* src/ds390/gen.c,
	* src/SDCCutil.c,