@@ -1,4 +1,9 @@
-2016-08-04 Erik Petrich <epetrich
+2016-08-05 Erik Petrich <epetrich AT ivorytower.normna.ok.us>
+
+	* src/SDCCcse.c (ifxOptimize): fixed bug #2484
+	* src/z80/gen.c (ld_cost): fixed bug #2399
+
+2016-08-04 Erik Petrich <epetrich AT ivorytower.normna.ok.us
 
 	* src/SDCCast.c (decorateTree, optimizeCompare): fixed bug #2503
 	  and an unreported bug similar to bug #2529
